--- a/pages/index.html
+++ b/pages/index.html
@@ -39,6 +39,49 @@
                 </li>
             </ul>
         </div>
+        <div class="mobile-menu inactive">
+            <ul>
+                <li>
+                    <a href="">CATEGORIES</a>
+                </li>
+                <li>
+                    <a href="">All</a>
+                </li>
+                <li>
+                    <a href="">Clothes</a>
+                </li>
+                <li>
+                    <a href="">Electronics</a>
+                </li>
+                <li>
+                    <a href="">Furnitures</a>
+                </li>
+                <li>
+                    <a href="">Toys</a>
+                </li>
+                <li>
+                    <a href="">Others</a>
+                </li>
+            </ul>
+            
+            <ul>
+                <li>
+                    <a href="">My orders</a>
+                </li>
+                <li>
+                    <a href="">My account</a>
+                </li>
+            </ul>
+    
+            <ul>
+                <li>
+                    <a class="email" href="/">platzi@example.com</a>
+                </li>
+                <li>
+                    <a class="sign-out" href="/">Sign out</a>
+                </li>
+            </ul>
+        </div>
 
         <div class="navbar-right">
             <ul>
