--- a/pages/index.html
+++ b/pages/index.html
@@ -167,7 +167,25 @@
             </button>
         </div>
     </aside>
-    
+    <section class="main-container">
+        <div class="cards-container">
+            <!-- <div class="product-card">
+                <img class="product-img"
+                    src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?cs=srgb&dl=pexels-philipp-m-100582.jpg&fm=jpg"
+                    alt="">
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="../icons/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>
+            </div> -->
+        </div>
+    </section>
+
     <script src="./index.js"></script>
 </body>
 </html>
