--- a/pages/index.html
+++ b/pages/index.html
@@ -109,7 +109,7 @@
             </ul>
         </div>
     </nav>
-    <aside class="product-detail inactive">
+    <aside id="shoppingCardContainer" class="inactive">
         <div class="title-container">
             <img src="../icons/flechita.svg" alt="arrow">
             <p class="title">Shopping cart</p>
@@ -167,22 +167,27 @@
             </button>
         </div>
     </aside>
+
+    <aside id="productDetail" class="inactive">
+        <div class="product-detail-close">
+            <img src="../icons/icon_close.png" alt="close">
+        </div>
+        <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?cs=srgb&dl=pexels-philipp-m-100582.jpg&fm=jpg"
+            alt="bike">
+
+        <div class="product-info">
+            <p>$35,00</p>
+            <p>Bike</p>
+            <p>With its practical interior, this bike is really amazing and fast, you will be sense that can fly</p>
+            <button class="primary-button add-to-cart-button">
+                <img src="../icons/bt_add_to_cart.svg" alt="add">
+                Add to cart
+            </button>
+        </div>
+    </aside>
+
     <section class="main-container">
         <div class="cards-container">
-            <!-- <div class="product-card">
-                <img class="product-img"
-                    src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?cs=srgb&dl=pexels-philipp-m-100582.jpg&fm=jpg"
-                    alt="">
-                <div class="product-info">
-                    <div>
-                        <p>$120,00</p>
-                        <p>Bike</p>
-                    </div>
-                    <figure>
-                        <img src="../icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div> -->
         </div>
     </section>
 
