re estructuracion de los fuentes

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <nav>
-        <img class="menu" src="../icons/icon_menu.svg" alt="menu">
+        <img class="menu" src="./assets/icons/icon_menu.svg" alt="menu">
 
         <div class="navbar-left">
-            <img class="logo" src="../logos/logo_yard_sale.svg" alt="logo">
+            <img class="logo" src="./assets/logos/logo_yard_sale.svg" alt="logo">
 
             <ul>
                 <li>
@@ -87,10 +87,10 @@
             <ul>
                 <li class="navbar-email">
                     platzi@example.com
-                    <img src="../icons/flechita.svg" alt="">
+                    <img src="./assets/icons/flechita.svg" alt="">
                 </li>
                 <li class="navbar-shopping-cart">
-                    <img src="../icons/icon_shopping_cart.svg" alt="shopping-cart">
+                    <img src="./assets/icons/icon_shopping_cart.svg" alt="shopping-cart">
                     <div>2</div>
                 </li>
             </ul>
@@ -111,7 +111,7 @@
     </nav>
     <aside id="shoppingCardContainer" class="inactive">
         <div class="title-container">
-            <img src="../icons/flechita.svg" alt="arrow">
+            <img src="./assets/icons/flechita.svg" alt="arrow">
             <p class="title">Shopping cart</p>
         </div>
         <div class="my-order-content">
@@ -121,7 +121,7 @@
                 </figure>
                 <p>Bike</p>
                 <p>$30,00</p>
-                <img src="../icons/icon_close.png" alt="close">
+                <img src="./assets/icons/icon_close.png" alt="close">
             </div>
             <div class="shopping-cart">
                 <figure>
@@ -129,7 +129,7 @@
                 </figure>
                 <p>Bike</p>
                 <p>$30,00</p>
-                <img src="../icons/icon_close.png" alt="close">
+                <img src="./assets/icons/icon_close.png" alt="close">
             </div>
             <div class="shopping-cart">
                 <figure>
@@ -137,7 +137,7 @@
                 </figure>
                 <p>Bike</p>
                 <p>$30,00</p>
-                <img src="../icons/icon_close.png" alt="close">
+                <img src="./assets/icons/icon_close.png" alt="close">
             </div>
             <div class="shopping-cart">
                 <figure>
@@ -145,7 +145,7 @@
                 </figure>
                 <p>Bike</p>
                 <p>$30,00</p>
-                <img src="../icons/icon_close.png" alt="close">
+                <img src="./assets/icons/icon_close.png" alt="close">
             </div>
             <div class="shopping-cart">
                 <figure>
@@ -153,7 +153,7 @@
                 </figure>
                 <p>Bike</p>
                 <p>$30,00</p>
-                <img src="../icons/icon_close.png" alt="close">
+                <img src="./assets/icons/icon_close.png" alt="close">
             </div>
 
             <div class="order">
@@ -170,7 +170,7 @@
 
     <aside id="productDetail" class="inactive">
         <div class="product-detail-close">
-            <img src="../icons/icon_close.png" alt="close">
+            <img src="./assets/icons/icon_close.png" alt="close">
         </div>
         <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?cs=srgb&dl=pexels-philipp-m-100582.jpg&fm=jpg"
             alt="bike">
@@ -180,7 +180,7 @@
             <p>Bike</p>
             <p>With its practical interior, this bike is really amazing and fast, you will be sense that can fly</p>
             <button class="primary-button add-to-cart-button">
-                <img src="../icons/bt_add_to_cart.svg" alt="add">
+                <img src="./assets/icons/bt_add_to_cart.svg" alt="add">
                 Add to cart
             </button>
         </div>
